syntax = "proto3";

message CIDR {
  bytes ip = 1;
  uint32 prefix = 2;
}

message GeoIP {
  string country_code = 1;
  repeated CIDR cidr = 2;
  bool inverse_match = 3;
}

message GeoIPList {
  repeated GeoIP entry = 1;
}
